--- a/src/data/overlay.css
+++ b/src/data/overlay.css
@@ -37,7 +37,7 @@
   text-align: center;
   overflow: hidden;
   border-radius: 2px;
-  height: 10px;
+  height: 11px;
   line-height: 10px;
 }
 /* Windows Small Icon */
